--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
-  "name": "foodfood",
-  "version": "1.0.0",
-  "description": "",
-  "main": "script.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Hemersonmelo/foodFood.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Hemersonmelo/foodFood/issues"
-  },
-  "homepage": "https://github.com/Hemersonmelo/foodFood#readme",
-  "dependencies": {
-    "express": "^4.17.1"
-  }
+    "name": "foodfood",
+    "version": "1.0.0",
+    "description": "",
+    "main": "script.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Hemersonmelo/foodFood.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/Hemersonmelo/foodFood/issues"
+    },
+    "homepage": "https://github.com/Hemersonmelo/foodFood#readme",
+    "dependencies": {
+        "express": "^4.17.1"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.12"
+    }
 }
