--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "",
     "main": "script.js",
     "scripts": {
-        "postinstall": "ng build",
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node server.js"
+        "start": "node server.js",
+        "postinstall": "ng build"
     },
     "repository": {
         "type": "git",
@@ -19,7 +19,8 @@
     },
     "homepage": "https://github.com/Hemersonmelo/foodFood#readme",
     "dependencies": {
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "postinstall": "^0.7.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.12"
