--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node server.js",
-        "heroku-postbuild": "ng build --prod"
+        "start": "node server.js"
     },
     "repository": {
         "type": "git",
